working with my grid allignment

--- a/index/index.html
+++ b/index/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="name">Frizzle Painting <span>Gallery</span></h1>
+            <h1 class="name">Fr!zz Kanmi Art-Works <span>Gallery</span></h1>
             <button>Sign Up Here</button>
         </header>
         <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, odit!</p>
@@ -23,7 +23,7 @@
                 <img src="images/img1.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Frizzle Painting One</h3>
+                <h3>Fr!zz Painting One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
                     saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
                     quibusdam iure hic deleniti nihil quam.</p>
@@ -36,7 +36,7 @@
                 <img src="images/img2.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Frizzle Painting One</h3>
+                <h3>Fr!zz Painting Two</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, hic commodi. Deleniti, voluptate
                     sapiente maiores vitae officia molestias voluptatum, totam, repellat maxime repudiandae aliquam
                     quibusdam.</p>
@@ -49,7 +49,7 @@
                 <img src="images/img3.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Frizzle Painting Three</h3>
+                <h3>Fr!zz Painting Three</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis at iste id voluptates
                     harum error magni non expedita labore eum itaque similique, delectus asperiores quia natus minima,
                     qui odit.</p>
@@ -62,7 +62,7 @@
                 <img src="images/img4.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Frizzle Painting Four</h3>
+                <h3>Fr!zz Painting Four</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quo consequatur explicabo nihil,
                     ipsum nostrum commodi iure recusandae fuga quod enim rerum quaerat. Nemo illum non accusantium vel
                     expedita autem!</p>
@@ -75,7 +75,7 @@
                 <img src="images/img5.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Frizzle Painting Five</h3>
+                <h3>Fr!zz Painting Five</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
                 saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
                 quibusdam iure hic deleniti nihil quam.</p>
