--- a/index/index.html
+++ b/index/index.html
@@ -15,65 +15,55 @@
             <h1 class="name">Fr!zz Kanmi Art-Works <span>Gallery</span></h1>
             <button>Sign Up Here</button>
         </header>
-        <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, odit!</p>
+        <h3 class="text">I'm A Web Designer, Developer & A Programmer</h3>
 
 
         <div class="cards">
-            <div>
                 <img src="images/img1.jpg" alt="">
-            </div>
             <div class="content">
                 <h3>Fr!zz Painting One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
-                    saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
-                    quibusdam iure hic deleniti nihil quam.</p>
+                saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
+                quibusdam iure hic deleniti nihil quam.</p>
 
                 <button>Buy Now</button>
             </div>
         </div>
-        <div class="cards">
-            <div class="img">
+        <div class="cards" data-aos="fade-right">
                 <img src="images/img2.jpg" alt="">
-            </div>
             <div class="content">
                 <h3>Fr!zz Painting Two</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, hic commodi. Deleniti, voluptate
-                    sapiente maiores vitae officia molestias voluptatum, totam, repellat maxime repudiandae aliquam
-                    quibusdam.</p>
+                sapiente maiores vitae officia molestias voluptatum, totam, repellat maxime repudiandae aliquam
+                quibusdam.</p>
 
                 <button>Buy Now</button>
             </div>
         </div>
-        <div class="cards">
-            <div>
+        <div class="cards" data-aos="fade-left">
                 <img src="images/img3.jpg" alt="">
-            </div>
             <div class="content">
                 <h3>Fr!zz Painting Three</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis at iste id voluptates
-                    harum error magni non expedita labore eum itaque similique, delectus asperiores quia natus minima,
-                    qui odit.</p>
+                harum error magni non expedita labore eum itaque similique, delectus asperiores quia natus minima,
+                qui odit.</p>
 
                 <button>Buy Now</button>
             </div>
         </div>
-        <div class="cards">
-            <div>
+        <div class="cards" data-aos="fade-right">
                 <img src="images/img4.jpg" alt="">
-            </div>
             <div class="content">
                 <h3>Fr!zz Painting Four</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quo consequatur explicabo nihil,
-                    ipsum nostrum commodi iure recusandae fuga quod enim rerum quaerat. Nemo illum non accusantium vel
-                    expedita autem!</p>
+                ipsum nostrum commodi iure recusandae fuga quod enim rerum quaerat. Nemo illum non accusantium vel
+                expedita autem!</p>
 
                 <button>Buy Now</button>
             </div>
         </div>
-        <div class="cards">
-            <div>
+        <div class="cards" data-aos="fade-left">
                 <img src="images/img5.jpg" alt="">
-            </div>
             <div class="content">
                 <h3>Fr!zz Painting Five</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
@@ -88,9 +78,6 @@
 
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <script src="main.js"></script>
 </body>
 
