Adjusted the media queries to work cross-devices

--- a/index/index.html
+++ b/index/index.html
@@ -23,8 +23,8 @@
             <div class="content">
                 <h3>Fr!zz Painting One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
-                saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
-                quibusdam iure hic deleniti nihil quam.</p>
+                saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi!
+                quibusdam iure hiu.</p>
 
                 <button>Buy Now</button>
             </div>
