readjusted the @media.

--- a/index/index.html
+++ b/index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animation On Scroll</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;373;427&display=swap" rel="stylesheet">
@@ -25,13 +25,8 @@
             <div class="content">
                 <h3>Fr!zz Painting One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odit aperiam quia quidem tenetur
-<<<<<<< HEAD:index.html
-                saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi!
-                quibusdam iure hiu.</p>
-=======
-                    saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
-                    quibusdam iure hic deleniti nihil quam.</p>
->>>>>>> parent of 6aca5a3... work done!:index/index.html
+                saepe molestiae perspiciatis aliquid, quos consequatur aliquam doloribus excepturi! Quisquam
+                quibusdam iure hic deleniti nihil quam.</p>
 
                 <button>Buy Now</button>
             </div>
@@ -43,8 +38,8 @@
             <div class="content">
                 <h3>Fr!zz Painting Two</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, hic commodi. Deleniti, voluptate
-                    sapiente maiores vitae officia molestias voluptatum, totam, repellat maxime repudiandae aliquam
-                    quibusdam.</p>
+                sapiente maiores vitae officia molestias voluptatum, totam, repellat maxime repudiandae aliquam
+                quibusdam.</p>
 
                 <button>Buy Now</button>
             </div>
@@ -56,8 +51,8 @@
             <div class="content">
                 <h3>Fr!zz Painting Three</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis at iste id voluptates
-                    harum error magni non expedita labore eum itaque similique, delectus asperiores quia natus minima,
-                    qui odit.</p>
+                harum error magni non expedita labore eum itaque similique, delectus asperiores quia natus minima,
+                qui odit.</p>
 
                 <button>Buy Now</button>
             </div>
@@ -69,8 +64,8 @@
             <div class="content">
                 <h3>Fr!zz Painting Four</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quo consequatur explicabo nihil,
-                    ipsum nostrum commodi iure recusandae fuga quod enim rerum quaerat. Nemo illum non accusantium vel
-                    expedita autem!</p>
+                ipsum nostrum commodi iure recusandae fuga quod enim rerum quaerat. Nemo illum non accusantium vel
+                expedita autem!</p>
 
                 <button>Buy Now</button>
             </div>
